# statistics_for_data_science

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
docs/.ipynb_checkpoints/: index-checkpoint.md
logs/: 2025-04-08.md  2025-04-09.md  2025-04-10.md  2025-04-12.md
logs/.ipynb_checkpoints/: 2025-04-09-checkpoint.md  2025-04-10-checkpoint.md
notebooks/: 1.1_exploratory_data_analysis.ipynb  1.2_location_variability_estimators.ipynb  1.2_location_variability_refined.ipynb  2.2_bootstrap_confidence_intervals.ipynb  chapter_01_exploratory_data_analysis.ipynb  configs.py
notebooks/.ipynb_checkpoints/: 1.1_exploratory_data_analysis-checkpoint.ipynb  1.2_location_variability-checkpoint.ipynb  1.2_location_variability_refined-checkpoint.ipynb  1.3_categorical_correlation_multivariate-checkpoint.ipynb  1.3_distribution_analysis-checkpoint.ipynb  1.4_distribution_analysis_thresholds-checkpoint.ipynb  2.1_sampling_bias_mean-checkpoint.ipynb
site/: index.html
site/search/: search_index.json
